[package]
name = "statemap-server"
version = "0.1.0"
authors = ["Michael Lange <dingoeatingfuzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde_json = "1.0"
serde_derive = "1.0"
memmap = "0.6"
natord = "1.0.9"
palette = "0.4"
rand = "0.5"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]
